tests/negative/issue1344/Other.juvix
module Other;

type Unit :=
  | t : Unit;

